# dmarc-parser-rs

./: Cargo.toml  LICENSE
src/: lib.rs  report.rs
tests/: integration_test.rs
tests/resources/: bad-content-type.gz.eml  test.gz.eml  test.xml.eml  test.zip.eml  top-level.gz.eml
