[package]
name = "dmarc-parser"
version = "0.1.0"
authors = ["Patrick Kerrigan"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
mailparse = "0.13"
flate2 = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
chrono = "0.4"
serde-xml-rs = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.3", features = ["std", "unicode-perl"]}
